--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
   thymeleaf:
     cache: false
 
+  # file size
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+
   # spring data jpa
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
